Adding new tests and RTM mode